パズルをテーブル化

--- a/slidingpuzzle.html
+++ b/slidingpuzzle.html
@@ -13,53 +13,32 @@
         <p>1～15まで順番に並べられたらクリアです。</p>
     </header>
     <main>
-        <div class="frame">
-            <a class="number">
-                <h1>1</h1>
-            </a>
-            <a class="number">
-                <h1>2</h1>
-            </a>
-            <a class="number">
-                <h1>3</h1>
-            </a>
-            <a class="number">
-                <h1>4</h1>
-            </a>
-            <a class="number">
-                <h1>5</h1>
-            </a>
-            <a class="number">
-                <h1>6</h1>
-            </a>
-            <a class="number">
-                <h1>7</h1>
-            </a>
-            <a class="number">
-                <h1>8</h1>
-            </a>
-            <a class="number">
-                <h1>9</h1>
-            </a>
-            <a class="number">
-                <h1>10</h1>
-            </a>
-            <a class="number">
-                <h1>11</h1>
-            </a>
-            <a class="number">
-                <h1>12</h1>
-            </a>
-            <a class="number">
-                <h1>13</h1>
-            </a>
-            <a class="number">
-                <h1>14</h1>
-            </a>
-            <a class="number">
-                <h1>15</h1>
-            </a>
-        </div>
+        <table>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>10</td>
+                <td>11</td>
+                <td>12</td>
+            </tr>
+            <tr>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+                <td></td>
+            </tr>
+        </table>
     </main>
     <footer></footer>
   </body>
