jQueryを読み込むようにした

--- a/slidingpuzzle.html
+++ b/slidingpuzzle.html
@@ -13,12 +13,12 @@
         <p>1～15まで順番に並べられたらクリアです。</p>
     </header>
     <main>
-        <table>
+        <table id = "tbl" class="table">
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
+                <td class="puzzle">1</td>
+                <td class="puzzle">2</td>
+                <td class="puzzle">3</td>
+                <td class="puzzle">4</td>
             </tr>
             <tr>
                 <td>5</td>
@@ -41,5 +41,6 @@
         </table>
     </main>
     <footer></footer>
+    <script src="slidingpuzzle.js"></script>
   </body>
 </html>
