jQueryを読み込むようにした

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="slidingpuzzle.css">
     <link rel="stylesheet" href="slidingpuzzle_reset.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <title>Sliding15Puzzle</title>
   </head>
   <body>
@@ -13,31 +14,8 @@
         <p>1～15まで順番に並べられたらクリアです。</p>
     </header>
     <main>
-        <table id = "tbl" class="table">
-            <tr>
-                <td class="puzzle">1</td>
-                <td class="puzzle">2</td>
-                <td class="puzzle">3</td>
-                <td class="puzzle">4</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>10</td>
-                <td>11</td>
-                <td>12</td>
-            </tr>
-            <tr>
-                <td>13</td>
-                <td>14</td>
-                <td>15</td>
-                <td></td>
-            </tr>
+        <table id = "tbl">
+        
         </table>
     </main>
     <footer></footer>
